--- a/src/schema/rules/files/deriv/preprocessed_data.yaml
+++ b/src/schema/rules/files/deriv/preprocessed_data.yaml
@@ -277,3 +277,9 @@ pet_blood_common:
     $ref: rules.files.raw.pet.blood.entities
     space: optional
     description: optional
+
+task_events_common:
+  $ref: rules.files.raw.task.events
+  entities:
+    $ref: rrules.files.raw.task.events.entities
+    description: optional
