--- a/src/schema/rules/files/deriv/preprocessed_data.yaml
+++ b/src/schema/rules/files/deriv/preprocessed_data.yaml
@@ -72,49 +72,49 @@ beh_noncontinuous_common:
 channels_channels_common:
   $ref: rules.files.raw.channels.channels
   entities:
-    $ref: rrules.files.raw.channels.channels.entities
+    $ref: rules.files.raw.channels.channels.entities
     description: optional
 
 channels_channels__meg_common:
   $ref: rules.files.raw.channels.channels__meg
   entities:
-    $ref: rrules.files.raw.channels.channels__meg.entities
+    $ref: rules.files.raw.channels.channels__meg.entities
     description: optional
 
 channels_channels__motion_common:
   $ref: rules.files.raw.channels.channels__motion
   entities:
-    $ref: rrules.files.raw.channels.channels__motion.entities
+    $ref: rules.files.raw.channels.channels__motion.entities
     description: optional
 
 channels_coordsystem_common:
   $ref: rules.files.raw.channels.coordsystem
   entities:
-    $ref: rrules.files.raw.channels.coordsystem.entities
+    $ref: rules.files.raw.channels.coordsystem.entities
     description: optional
 
 channels_coordsystem__eeg_common:
   $ref: rules.files.raw.channels.coordsystem___eeg
   entities:
-    $ref: rrules.files.raw.channels.coordsystem__eeg.entities
+    $ref: rules.files.raw.channels.coordsystem__eeg.entities
     description: optional
 
 channels_electrodes_common:
   $ref: rules.files.raw.channels.electrodes
   entities:
-    $ref: rrules.files.raw.channels.electrodes.entities
+    $ref: rules.files.raw.channels.electrodes.entities
     description: optional
 
 channels_electrodes__meg_common:
   $ref: rules.files.raw.channels.electrodes__meg
   entities:
-    $ref: rrules.files.raw.channels.electrodes__meg.entities
+    $ref: rules.files.raw.channels.electrodes__meg.entities
     description: optional
 
 channels_electrodes_optodes_common:
   $ref: rules.files.raw.channels.optodes
   entities:
-    $ref: rrules.files.raw.channels.optodes.entities
+    $ref: rules.files.raw.channels.optodes.entities
     description: optional
 
 dwi_dwi_common:
@@ -281,5 +281,5 @@ pet_blood_common:
 task_events_common:
   $ref: rules.files.raw.task.events
   entities:
-    $ref: rrules.files.raw.task.events.entities
+    $ref: rules.files.raw.task.events.entities
     description: optional
