--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -112,10 +112,25 @@ source = [
 [tool.coverage.run]
 parallel = true
 
-[tool.bumpver]
+[tool.bumpversion]
 current_version = "1.1.0-dev"
-version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
-commit = false
+parse = """(?x)
+    (?P<major>[0-9]+)
+    \\.(?P<minor>[0-9]+)
+    \\.(?P<patch>[0-9]+)
+    (?:-(?P<pre_label>dev))?
+"""
+serialize = ["{major}.{minor}.{patch}-{pre_label}", "{major}.{minor}.{patch}"]
+commit = true
+message = "chore: Bump schema package to {new_version}"
+# Use --tag on releases
+tag = false
+tag_name = "schema-{new_version}"
+tag_message = "Schema release {new_version}"
 
-[tool.bumpver.file_patterns]
-"src/bidsschematools/data/schema/SCHEMA_VERSION" = ['{version}']
+[tool.bumpversion.parts.pre_label]
+values = ["dev", "final"]
+optional_value = "final"
+
+[[tool.bumpversion.files]]
+filename = "../../src/schema/SCHEMA_VERSION"
