--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -39,6 +39,13 @@ source = [
 [tool.coverage.run]
 parallel = true
 
+# Release process:
+# cd tools/schemacode
+# uvx bump-my-version bump pre_label --tag
+# [inspect result]
+# git push upstream <current-branch> --tags
+# uvx bump-my-version bump <patch|minor|major>
+# git push upstream <current-branch>
 [tool.bumpversion]
 current_version = "1.0.3-dev"
 parse = """(?x)
