--- a/src/schema/rules/checks/dataset.yaml
+++ b/src/schema/rules/checks/dataset.yaml
@@ -18,8 +18,8 @@ ParticipantIDMismatch:
   issue:
     code: PARTICIPANT_ID_MISMATCH
     message: |
-      Participant labels found in this dataset did not match the values in participant_id column
-      found in the participants.tsv file.
+      Subject directories found in this dataset did not match the values in
+      the participant_id column found in the participants.tsv file.
     level: error
   selectors:
     - path == '/participants.tsv'
@@ -35,7 +35,8 @@ PhenotypeSubjectsMissing:
   issue:
     code: PHENOTYPE_SUBJECTS_MISSING
     message: |
-      A phenotype/ .tsv file lists subjects that were not found in the dataset.
+      A phenotype/ .tsv file lists subjects that were not found in
+      the participant_id column found in the participants.tsv file.
     level: error
   selectors:
     - path == '/participants.tsv'
