--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -17,7 +17,7 @@ body:
           If not, please open an issue in the [bids-2-devel repository](https://github.com/bids-standard/bids-2-devel) instead.
 
         - Is there already a group working on your idea?
-          Check the [BIDS extension proposals](https://bids.neuroimaging.io/get_involved.html#extending-the-bids-specification)
+          Check the [BIDS extension proposals](https://bids.neuroimaging.io/extensions/index.html)
 
         - Will your idea potentially require a large effort?
           Read [BEP lead guidelines](https://docs.google.com/document/d/1pWmEEY-1-WuwBPNy5tDAxVJYQ9Een4hZJM06tQZg8X4/).
