--- a/tools/schemacode/pyproject.toml
+++ b/tools/schemacode/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.9"
 dependencies = [
     "click",
     "pyyaml",
-    "jsonschema"
+    "jsonschema[format]"
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
