--- a/src/schema/rules/directories.yaml
+++ b/src/schema/rules/directories.yaml
@@ -22,6 +22,7 @@ raw:
       - code
       - derivatives
       - phenotype
+      - prov
       - sourcedata
       - stimuli
       - subject
@@ -35,6 +36,10 @@ raw:
     opaque: true
   phenotype:
     name: phenotype
+    level: optional
+    opaque: false
+  prov:
+    name: prov
     level: optional
     opaque: false
   sourcedata:
@@ -70,6 +75,7 @@ derivative:
       - code
       - derivatives
       - phenotype
+      - prov
       - sourcedata
       - stimuli
       - subject
@@ -83,6 +89,10 @@ derivative:
     opaque: true
   phenotype:
     name: phenotype
+    level: optional
+    opaque: false
+  prov:
+    name: prov
     level: optional
     opaque: false
   sourcedata:
