--- a/src/schema/rules/files/common/core.yaml
+++ b/src/schema/rules/files/common/core.yaml
@@ -36,6 +36,9 @@ code:
 derivatives:
   level: optional
   path: derivatives
+prov:
+  level: optional
+  path: prov
 sourcedata:
   level: optional
   path: sourcedata
